--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,19 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
+      - name: Copy Godot Editor Settings
+        run: |
+          mkdir -p ~/.config/godot
+          cp $GITHUB_WORKSPACE/editor_settings-3.tres ~/.config/godot/editor_settings-3.tres
+
       - name: Godot Export
         # You may pin to the exact commit or the version.
         # uses: firebelley/godot-export@2c1be536306fea5463d885ecebfff85bd2f3067e
